<resources>
    <string name="app_name">FinalProject</string>
    <string name="app_name1">Task Management</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email address</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation">Task Management Application</string>
    <string name="app_icon">App Icon</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="today">Today</string>
    <string name="all_tasks">All Tasks</string>
    <string name="all_tasks_activities">Tasks Activities</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="new_task">New Task</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="add_new_task">Add New Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="due_date_e_g_yyyy_mm_dd">Due Date (e.g., YYYY-MM-DD)</string>
    <string name="due_time_e_g_hh_mm">Due Time (e.g., HH:MM)</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="add_task">Add Task</string>
    <string name="start_date_e_g_yyyy_mm_dd">Start Date (e.g., YYYY-MM-DD)</string>
    <string name="no_results_found">No Results Found</string>
    <string name="search_by_keywords">Search By KeyWord</string>
    <string name="sign_in_again">Sign In Again</string>
    <string name="you_have_been_logged_out">You have been logged out.</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="fetch_tasks">Load API Tasks</string>
    <string name="fetch_tasks_db">Load All Tasks</string>
    <string name="mark_as_completed_stauts">Completion Status</string>
    <string name="priority">Task Priority</string>
    <string-array name="priorities">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>