<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/all_tasks"
        android:textSize="24sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sort_spinner_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginTop="16dp"
        android:entries="@array/sort_options"
        android:spinnerMode="dropdown"
        android:layout_gravity="right" />


    <ListView
        android:id="@+id/all_tasks_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_fetch_tasks_api"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fetch_tasks"
            android:layout_margin="4dp" />

        <Button
            android:id="@+id/btn_fetch_tasks_db"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fetch_tasks_db"
            android:layout_margin="4dp" />
    </LinearLayout>
</LinearLayout>
