<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Task Title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Task Description"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/completionstauts"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_completed_stauts"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TaskDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date_e_g_yyyy_mm_dd" />

        <TextView
            android:id="@+id/task_priority"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/task_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Completed" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/edit_button"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_build_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/Rembtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_notifications_none_24" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/Sharebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_mail_outline_24" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/Delbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_delete_24" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
